eBNF.txt
0;/\C\<Alith\>//^finish$/+1,$Alith \%(=.*\)\@<!=
finish

program    = function*
function   = ident "(" (ident ("," ident)*)? ")" "{" stmt* "}"
stmt       = expr ";" |
                "{" stmt* "}" |
                "if" "(" expr ")" stmt ("else" "if" "(" expr ")" stmt)* ("else" stmt)? |
                "for" "(" expr? ";" expr? ";" expr? ") stmt |
                "while" "(" expr ")" stmt |
                "return" expr ";"
expr       = assign
assign     = equality ("=" assign)?
equality   = relational ("==" relational | "!=" relational)*
relational = add (">" add | "<" add | ">=" add | "<=" add)*
add        = mul ("+" mul | "-" mul)*
mul        = unary ("*" unary | "/" unary)*
unary      = ("+" | "-")? primary | ("&" | "*") unary
primary    = num | ident ("(" (expr ("," expr)*)? ")")? | "(" expr ")"
