parser.c
#include "mimicc.h"
#include <stdio.h>
#include <string.h>

// TODO: Accept using pointer to unknown type in struct member: e.g.:
//   struct A { struct B *obj };

#define abortIfEOF()                                                                     \
    do {                                                                                 \
        if (atEOF())                                                                     \
            errorUnexpectedEOF();                                                        \
    } while (0)

static int atEOF(void);
static Obj *parseEntireDeclaration(int allowTentativeArray);
static TypeInfo *parseBaseType(ObjAttr *attr);
static Obj *parseAdvancedTypeDeclaration(TypeInfo *baseType, int allowTentativeArray);
static Function *parseFuncArgDeclaration(void);
static int alignOf(const TypeInfo *ti);
static Node *decl(void);
static Node *stmt(void);
static StructOrUnion *structOrUnionDeclaration(const ObjAttr *attr, int isStruct);
static void structorUnionBody(StructOrUnion *s, int isStruct);
static Enum *enumDeclaration(const ObjAttr *attr);
static void enumBody(Enum *e);
static Node *varDeclaration(void);
static Node *varInitializer(void);
static Node *varInitializerList(void);
static Node *expr(void);
static Node *assign(void);
static Node *constant(void);
static Node *conditional(void);
static Node *logicalOR(void);
static Node *logicalAND(void);
static Node *XORexpr(void);
static Node *ORexpr(void);
static Node *ANDexpr(void);
static Node *equality(void);
static Node *relational(void);
static Node *shift(void);
static Node *add(void);
static Node *mul(void);
static Node *typecast(void);
static Node *unary(void);
static Node *compoundLiteral(void);
static Node *postfix(void);
static FCall *funcArgList(void);
static Node *primary(void);

_Noreturn static void errorIdentExpected(void) {
    errorAt(globals.token, "An identifier is expected");
}

_Noreturn static void errorTypeExpected(void) {
    errorAt(globals.token, "A type is expected");
}

_Noreturn static void errorUnexpectedEOF(void) {
    errorAt(globals.token, "Unexpected EOF");
}

// Check if name of given token matches to pair of {name, len}.  Returns TRUE
// if so, otherwise FALSE.
int matchToken(const Token *token, const char *name, const int len) {
    return token->len == len && memcmp(token->str, name, len) == 0;
}

// Check if current token matches `op` with type TokenReserved, and returns
// TRUE if so.
static int matchReserved(char *op) {
    abortIfEOF();
    if (globals.token->type == TokenReserved &&
            matchToken(globals.token, op, strlen(op))) {
        return 1;
    }
    return 0;
}

// Check if type of current token equals to given type.  Returns TRUE if so.
static int matchCertainTokenType(TokenType type) {
    abortIfEOF();
    if (globals.token->type == type)
        return 1;
    return 0;
}

// If the current token is the expected token, consume the token and returns
// TRUE.
static int consumeReserved(char *op) {
    if (matchReserved(op)) {
        globals.token = globals.token->next;
        return 1;
    }
    return 0;
}

// If the current token is TokenTypeName, consume the token and return the
// pointer to the token structure. Return NULL otherwise.
static Token *consumeTypeName(void) {
    abortIfEOF();
    if (globals.token->type == TokenTypeName) {
        Token *t = globals.token;
        globals.token = globals.token->next;
        return t;
    }
    return NULL;
}

// If the type of the current token is TokenIdent, consume the token and
// returns the pointer to token structure.  If not, returns NULL instead.
static Token *consumeIdent(void) {
    abortIfEOF();
    if (globals.token->type == TokenIdent) {
        Token *t = globals.token;
        globals.token = globals.token->next;
        return t;
    }
    return NULL;
}

// If the type of the current token is TokenLiteralString, consume the token
// and returns the pointer to the token structure.  If not, returns NULL
// instead.
static Token *consumeLiteralString(void) {
    abortIfEOF();
    if (globals.token->type == TokenLiteralString) {
        Token *t = globals.token;
        globals.token = globals.token->next;
        return t;
    }
    return NULL;
}

static int consumeNumber(int *val) {
    abortIfEOF();

    if (globals.token->type == TokenNumber) {
        *val = globals.token->val;
        globals.token = globals.token->next;
        return 1;
    }
    return 0;
}

// If the type of the current token is `type`, consume the token and returns
// TRUE.
static int consumeCertainTokenType(TokenType type) {
    abortIfEOF();
    if (globals.token->type == type) {
        globals.token = globals.token->next;
        return 1;
    }
    return 0;
}

// If the current token is the expected sign, consume the token. Otherwise
// reports an error.
static void expectReserved(char *op) {
    if (matchReserved(op)) {
        globals.token = globals.token->next;
        return;
    }
    errorAt(globals.token, "'%s' is expected.", op);
}

// If the current token is the number token, consume the token and returns the
// value. Otherwise reports an error.
static int expectNumber(void) {
    abortIfEOF();
    if (globals.token->type == TokenNumber) {
        int val = globals.token->val;
        globals.token = globals.token->next;
        return val;
    }
    errorAt(globals.token, "Non number appears.");
}

// If the current token is ident token, consume the token and returns it.
// Otherwise exit anyway.
static Token *expectIdent(void) {
    Token *token = consumeIdent();
    if (token)
        return token;
    errorIdentExpected();
}

// Check if current token matches to the given token.  If so, do nothing, and
// otherwise reports an error and exits program.  Note that this function does
// not consume any tokens.
static void assureReserved(char *op) {
    if (matchReserved(op))
        return;
    errorAt(globals.token, "'%s' is expected.", op);
}

static int atEOF(void) { return globals.token->type == TokenEOF; }

static Token *buildTagNameForAnonymousObject(int id) {
    static const char prefix[] = "anonymous-object-";
    static const int prefix_size = sizeof(prefix);
    Token *tagName = (Token *)safeAlloc(sizeof(Token));
    int suffix_len = 1;

    for (int tmp = id / 10; tmp; tmp /= 10)
        suffix_len++;

    tagName->len = prefix_size + suffix_len - 1;
    tagName->str = (char *)safeAlloc(tagName->len + 1);

    sprintf(tagName->str, "%s%d", prefix, id);

    return tagName;
}

static void enterNewEnv(void) {
    Env *env = (Env *)safeAlloc(sizeof(Env));
    env->outer = globals.currentEnv;
    globals.currentEnv = env;
}

static void exitCurrentEnv(void) {
    if (!globals.currentEnv->outer)
        errorUnreachable();
    globals.currentEnv = globals.currentEnv->outer;
}

static Obj *newObj(Token *t, TypeInfo *typeInfo, int offset) {
    Obj *v = (Obj *)safeAlloc(sizeof(Obj));
    v->next = NULL;
    v->token = t;
    v->type = typeInfo;
    v->offset = offset;
    return v;
}

static Obj *newObjFunction(Token *t) {
    Obj *obj = newObj(t, NULL, 0);
    obj->func = (Function *)safeAlloc(sizeof(Function));
    return obj;
}

static GVar *newGVar(Obj *obj) {
    GVar *gvar = (GVar *)safeAlloc(sizeof(GVar));
    gvar->obj = obj;
    return gvar;
}

static StructOrUnion *newStruct(void) {
    StructOrUnion *s = (StructOrUnion *)safeAlloc(sizeof(StructOrUnion));
    s->totalSize = -1;
    return s;
}

static Typedef *newTypedef(Obj *obj) {
    Typedef *def = (Typedef *)safeAlloc(sizeof(Typedef));
    def->name = obj->token;
    def->type = obj->type;
    return def;
}

// Generate new node object and returns it.  Members of kind, type, outerBlock,
// and token are automatically set to valid value.
static Node *newNode(NodeKind kind, TypeInfo *type) {
    Node *n = safeAlloc(sizeof(Node));
    n->kind = kind;
    n->lhs = NULL;
    n->rhs = NULL;
    n->body = NULL;
    n->next = NULL;
    n->env = globals.currentEnv;
    n->token = globals.token->prev;
    n->type = type;
    return n;
}

static Node *newNodeBinary(NodeKind kind, Node *lhs, Node *rhs, TypeInfo *type) {
    Node *n = newNode(kind, type);
    n->lhs = lhs;
    n->rhs = rhs;
    return n;
}

static Node *newNodeNum(int val) {
    Node *n = newNode(NodeNum, &Types.Number);
    n->val = val;
    return n;
}

static Node *newNodeLVar(Obj *obj) {
    Node *n = newNode(NodeLVar, obj->type);
    n->obj = obj;
    return n;
}

static Node *newNodeFor(void) {
    Node *n = newNode(NodeFor, &Types.None);
    n->initializer = NULL;
    n->condition = NULL;
    n->iterator = NULL;
    n->blockID = globals.blockCount++;
    return n;
}

static Node *newNodeFCall(TypeInfo *retType) {
    Node *n = newNode(NodeFCall, retType);
    n->fcall = (FCall *)safeAlloc(sizeof(FCall));
    return n;
}

static Node *newNodeFunction(Token *t) {
    Node *n = newNode(NodeFunction, &Types.None);
    n->obj = newObjFunction(t);
    n->token = t;
    return n;
}

// Find global variable by name. Return LVar* when variable is found. Returns
// NULL when not.
GVar *findGlobalVar(char *name, int len) {
    for (GVar *v = globals.globalVars; v; v = v->next) {
        if (matchToken(v->obj->token, name, len))
            return v;
    }
    return NULL;
}

// Find local variable in current block by name. Return LVar* when variable
// found. When not, returns NULL.
// Note that this function does NOT search global variables.
Obj *findLVar(char *name, int len) {
    for (Env *env = globals.currentEnv; env; env = env->outer) {
        for (Obj *v = env->vars; v; v = v->next) {
            if (matchToken(v->token, name, len))
                return v;
        }
    }
    if (globals.currentFunction) {
        for (Obj *v = globals.currentFunction->func->args; v; v = v->next) {
            if (matchToken(v->token, name, len))
                return v;
        }
    }
    return NULL;
}

Obj *findFunction(const char *name, int len) {
    for (Obj *obj = globals.functions; obj; obj = obj->next) {
        if (matchToken(obj->token, name, len))
            return obj;
    }
    return NULL;
}

// Look up structure and return it.  If structure didn't found, returns NULL.
static StructOrUnion *findStruct(const char *name, int len) {
    for (Env *env = globals.currentEnv; env; env = env->outer) {
        for (StructOrUnion *s = env->structs; s; s = s->next) {
            if (matchToken(s->tagName, name, len))
                return s;
        }
    }
    return NULL;
}

// Look up structure and return it.  If structure didn't found, returns NULL.
static StructOrUnion *findUnion(const char *name, int len) {
    for (Env *env = globals.currentEnv; env; env = env->outer) {
        for (StructOrUnion *s = env->unions; s; s = s->next) {
            if (matchToken(s->tagName, name, len))
                return s;
        }
    }
    return NULL;
}

// Search member in struct.  Returns the member if found, otherwise NULL.
Obj *findStructMember(const StructOrUnion *s, const char *name, int len) {
    for (Obj *m = s->members; m; m = m->next) {
        if (matchToken(m->token, name, len))
            return m;
    }
    return NULL;
}

static Enum *findEnum(const char *name, int len) {
    for (Env *env = globals.currentEnv; env; env = env->outer) {
        for (Enum *e = env->enums; e; e = e->next) {
            if (matchToken(e->tagName, name, len))
                return e;
        }
    }
    return NULL;
}

static EnumItem *findEnumItem(const char *name, int len) {
    for (Env *env = globals.currentEnv; env; env = env->outer) {
        for (Enum *e = env->enums; e; e = e->next) {
            for (EnumItem *item = e->items; item; item = item->next) {
                if (matchToken(item->token, name, len))
                    return item;
            }
        }
    }
    return NULL;
}

static Typedef *findTypedef(const char *name, int len) {
    for (Env *env = globals.currentEnv; env; env = env->outer) {
        for (Typedef *def = env->typedefs; def; def = def->next) {
            if (matchToken(def->name, name, len))
                return def;
        }
    }
    return NULL;
}

static TypeInfo *newTypeInfo(TypeKind kind) {
    TypeInfo *t = (TypeInfo *)safeAlloc(sizeof(TypeInfo));
    t->type = kind;
    return t;
}

static TypeInfo *cloneTypeInfo(TypeInfo *type) {
    TypeInfo *clone = newTypeInfo(TypeNone);
    *clone = *type;
    return clone;
}

static GVarInit *newGVarInit(GVarInitKind kind, Node *rhs, int size) {
    GVarInit *init = (GVarInit *)safeAlloc(sizeof(GVarInit));
    init->kind = kind;
    init->rhs = rhs;
    init->size = size;
    return init;
}

// Parse base of declared type and return its information.  Return NULL if type
// doesn't appear.
static TypeInfo *parseBaseType(ObjAttr *attr) {
    Token *type = NULL;

    if (attr) {
        Token *tokenSave = globals.token;
        for (;;) {
            if (consumeCertainTokenType(TokenStatic)) {
                attr->isStatic = 1;
            } else if (consumeCertainTokenType(TokenExtern)) {
                attr->isExtern = 1;
            } else if (consumeCertainTokenType(TokenTypedef)) {
                attr->isTypedef = 1;
            } else {
                break;
            }
        }
        if ((attr->isStatic + attr->isExtern + attr->isTypedef) >= 2) {
            errorAt(tokenSave, "Cannot combine \"static\" ,\"extern\" and \"typedef\".");
        }
    }

    type = consumeTypeName();
    if (type) {
        return newTypeInfo(type->varType);
    } else if (matchCertainTokenType(TokenStruct)) {
        StructOrUnion *s = structOrUnionDeclaration(attr, 1);
        TypeInfo *typeInfo = newTypeInfo(TypeStruct);
        typeInfo->structDef = s;
        return typeInfo;
    } else if (matchCertainTokenType(TokenUnion)) {
        StructOrUnion *u = structOrUnionDeclaration(attr, 0);
        TypeInfo *typeInfo = newTypeInfo(TypeUnion);
        typeInfo->unionDef = u;
        return typeInfo;
    } else if (matchCertainTokenType(TokenEnum)) {
        Enum *e = enumDeclaration(attr);
        TypeInfo *typeInfo = newTypeInfo(TypeEnum);
        typeInfo->enumDef = e;
        return typeInfo;
    } else {
        Token *tokenSave = globals.token;
        Token *ident = consumeIdent();

        if (ident) {
            Typedef *def = findTypedef(ident->str, ident->len);

            if (def) {
                return def->type;
            } else {
                globals.token = tokenSave;
                return NULL;
            }
        }
    }
    return NULL;
}

static Obj *parseEntireDeclaration(int allowTentativeArray) {
    TypeInfo *baseType = NULL;
    Obj *obj = NULL;

    baseType = parseBaseType(NULL);
    if (!baseType)
        errorTypeExpected();
    obj = parseAdvancedTypeDeclaration(baseType, allowTentativeArray);
    return obj;
}

static Obj *parseAdvancedTypeDeclaration(TypeInfo *baseType, int allowTentativeArray) {
    Obj *obj = NULL;
    Obj *inner = NULL;
    TypeInfo *placeHolder = NULL;
    Token *ident = NULL;

    obj = (Obj *)safeAlloc(sizeof(Obj));

    while (consumeReserved("*")) {
        TypeInfo *tmp = NULL;
        tmp = newTypeInfo(TypePointer);
        tmp->baseType = baseType;
        baseType = tmp;
    }

    ident = consumeIdent();
    if (ident) {
        obj->token = ident;
        obj->type = baseType;
    } else if (consumeReserved("(")) {
        placeHolder = newTypeInfo(TypeNone);
        inner = parseAdvancedTypeDeclaration(placeHolder, 0);
        // TODO: Check sizeOf(inner->type)
        expectReserved(")");
    }
    // TODO: Give error "ident expected" here?

    if (matchReserved("[")) {
        TypeInfo *arrayType = NULL;
        TypeInfo **curType = &arrayType;
        int needSize = !allowTentativeArray;
        while (consumeReserved("[")) {
            Token *token = globals.token;
            int arraySize = -1;

            if (consumeReserved("]")) {
                if (needSize)
                    errorAt(token, "Array size required.");
            } else {
                Node *sizeSpec = constant();
                if (!sizeSpec)
                    errorAt(token, "Constant expression required.");
                expectReserved("]");

                if (sizeSpec->kind != NodeNum)
                    errorUnreachable();
                arraySize = sizeSpec->val;
            }

            *curType = newTypeInfo(TypeArray);
            (*curType)->arraySize = arraySize;
            curType = &(*curType)->baseType;
            needSize = 1;
        }
        *curType = newTypeInfo(baseType->type);
        **curType = *baseType;
        baseType = arrayType;
    } else if (matchReserved("(")) {
        obj->func = parseFuncArgDeclaration();
        obj->func->retType = baseType;

        baseType = newTypeInfo(TypeFunction);
        baseType->funcDef = obj->func;
    }
    if (placeHolder)
        *placeHolder = *baseType;
    else
        obj->type = baseType;
    return inner ? inner : obj;
}

static Function *parseFuncArgDeclaration(void) {
    Function *func = (Function *)safeAlloc(sizeof(Function));
    Obj **arg = &func->args;

    expectReserved("(");
    if (consumeReserved(")"))
        return func;

    for (;;) {
        Token *tokenSave = globals.token;
        if (consumeReserved("...")) {
            func->haveVaArgs = 1;
            break;
        }
        if (*arg) {
            if ((*arg)->next)
                (*arg)->type->next = (*arg)->next->type;
            arg = &(*arg)->next;
        }
        (*arg) = parseEntireDeclaration(1);
        if (!(*arg) || (*arg)->type->type == TypeVoid) {
            if (*arg && func->argsCount) {
                errorAt(tokenSave,
                        "Function parameter must be only one if \"void\" appears.");
            }
            *arg = NULL;
            break;
        }

        // Read array as pointer when it appears on function arguments.
        for (TypeInfo **type = &(*arg)->type; (*type)->type == TypeArray;
                type = &(*type)->baseType) {
            *type = cloneTypeInfo(*type);
            (*type)->type = TypePointer;
        }

        func->argsCount++;

        if (!consumeReserved(","))
            break;
    }

    expectReserved(")");
    return func;
}

static void registerTypedef(Typedef *def) {
    if (findTypedef(def->name->str, def->name->len)) {
        errorAt(def->name, "Redefinition of typedef name.");
    }
    def->next = globals.currentEnv->typedefs;
    globals.currentEnv->typedefs = def;
}

// Return size of given type.  Return negative value for incomplete types.  If
// computing failed, exit program.
int sizeOf(const TypeInfo *ti) {
    if (ti->type == TypeInt || ti->type == TypeNumber) {
        return 4;
    } else if (ti->type == TypeEnum) {
        if (ti->enumDef->hasImpl)
            return 4;
        else
            return -1;
    } else if (ti->type == TypeChar || ti->type == TypeVoid) {
        return 1;
    } else if (ti->type == TypePointer || ti->type == TypeFunction) {
        return 8;
    } else if (ti->type == TypeArray) {
        if (ti->arraySize < 0)
            return -1;
        return sizeOf(ti->baseType) * ti->arraySize;
    } else if (ti->type == TypeStruct) {
        return ti->structDef->totalSize;
    } else if (ti->type == TypeUnion) {
        return ti->unionDef->totalSize;
    }
    errorUnreachable();
}

// Return alignment of given type.  If computing failed, exit program.
// The except is struct.  If it's not able to compute alignment of the struct
// now, returns -1.
static int alignOf(const TypeInfo *ti) {
    if (ti->type == TypeChar || ti->type == TypeVoid) {
        return 1;
    } else if (ti->type == TypeInt || ti->type == TypeNumber || ti->type == TypeEnum) {
        return 4;
    } else if (ti->type == TypePointer) {
        return 8;
    } else if (ti->type == TypeArray) {
        return alignOf(ti->baseType);
    } else if (ti->type == TypeStruct || ti->type == TypeUnion) {
        const StructOrUnion *objdef =
                ti->type == TypeStruct ? ti->structDef : ti->unionDef;
        int align;

        // Alignment of struct with no members is 1.
        if (objdef->members == NULL)
            return 1;

        align = -1;
        for (Obj *m = objdef->members; m; m = m->next) {
            int a = alignOf(m->type);
            if (a > align)
                align = a;
        }
        return align;
    }
    errorUnreachable();
}

// Determine the type of expression result for arithmetic operands.
// For the details, see the "6.3.1 Arithmetic operands" chapter (P.68) in this
// C11 draft PDF:
// https://www.open-std.org/jtc1/sc22/wg14/www/docs/n1548.pdf
static TypeInfo *getTypeForArithmeticOperands(TypeInfo *lhs, TypeInfo *rhs) {
    if (lhs->type == rhs->type) {
        return lhs;
    } else if (lhs->type == TypeNumber) {
        return rhs;
    } else if (rhs->type == TypeNumber) {
        return lhs;
    } else if (lhs->type == TypeChar) {
        return rhs;
    } else if (rhs->type == TypeChar) {
        return lhs;
    } else if (lhs->type == TypeInt) {
        return rhs;
    } else if (rhs->type == TypeInt) {
        return lhs;
    }
    errorUnreachable();
}

static int isAnonymousObject(Obj *obj) {
    static const char prefix[] = "anonymous-object-";
    static const size_t prefixSize = sizeof(prefix) - 1; // Don't care the last '\0'.
    return obj->token->len >= prefixSize &&
           memcmp(obj->token->str, prefix, prefixSize) == 0;
}

static GVarInit *buildGVarInitSection(TypeInfo *varType, Node *initializer) {
    if (!initializer) {
        return newGVarInit(GVarInitZero, NULL, sizeOf(varType));
    } else if (varType->type == TypeArray && varType->baseType->type == TypeChar &&
               initializer->kind == NodeLiteralString) {
        GVarInit head = {};
        GVarInit *init = &head;
        int strSize = initializer->token->literalStr->len;
        int arraySize = varType->arraySize;

        if (arraySize < 0)
            varType->arraySize = strSize;
        else if (strSize > arraySize)
            errorAt(initializer->token, "%d items given to array sized %d.", strSize,
                    arraySize);

        init->next = newGVarInit(GVarInitString, initializer, strSize);
        init = init->next;

        if (strSize < arraySize)
            init->next = newGVarInit(GVarInitZero, NULL, arraySize - strSize);

        return head.next;
    } else if (varType->type == TypeArray) {
        GVarInit head = {};
        GVarInit *init = &head;
        int initLen = 0;

        if (initializer->kind != NodeInitList)
            errorAt(initializer->token, "Initialzier-list required");

        for (Node *c = initializer->body; c; c = c->next)
            initLen++;

        if (varType->arraySize < 0)
            varType->arraySize = initLen;
        else if (initLen > varType->arraySize)
            errorAt(initializer->token, "%d items given to array sized %d.", initLen,
                    varType->arraySize);

        for (Node *c = initializer->body; c; c = c->next) {
            init->next = buildGVarInitSection(varType->baseType, c);
            while (init->next)
                init = init->next;
        }

        if (initLen < varType->arraySize)
            init->next = newGVarInit(GVarInitZero, NULL,
                    sizeOf(varType->baseType) * (varType->arraySize - initLen));

        return head.next;
    } else if (varType->type == TypeStruct) {
        GVarInit head = {};
        GVarInit *init = &head;
        Obj *member = NULL;
        int initLen = 0, memberCount = 0;
        int prevOffset = 0;

        // Compound-literal is given.  Re-use the initialzier of it.
        if (checkTypeEqual(varType, initializer->type)) {
            Obj *tmpObj = initializer->obj;

            if (tmpObj->isStatic && isAnonymousObject(tmpObj)) {
                for (GVar *var = globals.staticVars; var; var = var->next) {
                    if (matchToken(
                                var->obj->token, tmpObj->token->str, tmpObj->token->len))
                        return var->initializer;
                }
            }
        }

        if (initializer->kind != NodeInitList)
            errorAt(initializer->token, "Initialzier-list required");

        for (Node *c = initializer->body; c; c = c->next)
            initLen++;

        for (member = varType->structDef->members; member; member = member->next)
            memberCount++;

        if (initLen > memberCount)
            errorAt(initializer->token, "Too much items are given.");

        member = varType->structDef->members;
        for (Node *c = initializer->body; c; c = c->next) {
            int offset = member->offset;
            int padding = offset - prevOffset;

            padding = offset - prevOffset;
            if (padding) {
                init->next = newGVarInit(GVarInitZero, NULL, padding);
                init = init->next;
            }

            init->next = buildGVarInitSection(member->type, c);
            while (init->next)
                init = init->next;

            prevOffset = offset + sizeOf(member->type);
            member = member->next;
        }

        if (varType->structDef->totalSize - prevOffset)
            init->next = newGVarInit(
                    GVarInitZero, NULL, varType->structDef->totalSize - prevOffset);

        return head.next;
    } else if (varType->type == TypeUnion) {
        GVarInit head = {};
        GVarInit *init = &head;

        Obj *initTarget = NULL;
        Node *initVal = NULL;
        int initBytes = 0, uninitBytes = 0;

        // Compound-literal is given as the initial value.  Re-use the
        // initializer of the initial value.
        if (checkTypeEqual(varType, initializer->type)) {
            Obj *tmpObj = initializer->obj;

            if (tmpObj->isStatic && isAnonymousObject(tmpObj)) {
                for (GVar *var = globals.staticVars; var; var = var->next) {
                    if (matchToken(
                                var->obj->token, tmpObj->token->str, tmpObj->token->len))
                        return var->initializer;
                }
            }
        }

        if (initializer->kind != NodeInitList) {
            errorAt(initializer->token, "Initialzier-list required");
        } else if (initializer->body == NULL) {
            if (varType->unionDef->members != NULL)
                errorAt(initializer->token, "Value required in this initializer-list.");
            else
                return NULL;
        } else if (initializer->body->next != NULL) {
            errorAt(initializer->token, "Too much items in initializer-list.");
        }

        initTarget = varType->unionDef->members;
        initVal = initializer->body;
        initBytes = sizeOf(initTarget->type);
        uninitBytes = varType->unionDef->totalSize - initBytes;

        // Build initializer for the first member of union.
        init->next = buildGVarInitSection(initTarget->type, initVal);
        while (init->next)
            init = init->next;

        // Fill padding area with zero.
        if (uninitBytes)
            init->next = newGVarInit(GVarInitZero, NULL, uninitBytes);

        return head.next;
    } else if (varType->type == TypePointer) {
        int size = sizeOf(varType);

        if (!checkAssignable(varType, initializer->type)) {
            errorAt(initializer->token, "Different type.");
        }

        for (int keepGoing = 1; keepGoing;) {
            switch (initializer->kind) {
            case NodeTypeCast: // fallthrough.
            case NodeAddress:
                initializer = initializer->rhs;
                break;
            default:
                keepGoing = 0;
                break;
            }
        }

        if (initializer->type->type == TypeArray) {
            if (initializer->kind == NodeGVar || initializer->kind == NodeLVar ||
                    initializer->kind == NodeLiteralString ||
                    initializer->kind == NodeNum) {
                return newGVarInit(GVarInitPointer, initializer, size);
            }
        } else {
            if (initializer->kind == NodeGVar || initializer->kind == NodeNum ||
                    (initializer->kind == NodeLVar && initializer->obj->isStatic)) {
                return newGVarInit(GVarInitPointer, initializer, size);
            }
        }
        errorAt(initializer->token, "Constant value required.");
    } else {
        int size = sizeOf(varType);
        int modBySize = 0;

        // TODO: This is workaround.
        for (int keepGoing = 1; keepGoing;) {
            switch (initializer->kind) {
            case NodeSub:
                if (initializer->lhs->kind == NodeNum &&
                        initializer->rhs->kind == NodeNum) {
                    initializer =
                            newNodeNum(initializer->lhs->val - initializer->rhs->val);
                } else {
                    keepGoing = 0;
                }
                break;
            default:
                keepGoing = 0;
                break;
            }
        }

        modBySize = initializer->val;
        if (size < 4)
            modBySize &= ((1 << size * 8) - 1);

        if (initializer->kind != NodeNum) {
            errorAt(initializer->token, "Constant value required.");
        } else if (modBySize != initializer->val) {
            errorAt(initializer->token, "Value overflows: value will be %d.", modBySize);
        }
        return newGVarInit(GVarInitNum, initializer, size);
    }
}

void program(void) {
    Node body = {};
    Node *last = &body;

    if (!consumeCertainTokenType(TokenSOF))
        errorUnreachable();

    globals.code = newNode(NodeBlock, &Types.None);
    while (!atEOF()) {
        Node *n = decl();
        if (n) {
            last->next = n;
            last = last->next;
        }
    }
    globals.code->body = body.next;
}

// Parse declarations of global variables/functions/structs and definitions of
// functions.
static Node *decl(void) {
    TypeInfo *baseType = NULL;
    StructOrUnion *s = NULL;
    Obj *obj = NULL;
    ObjAttr attr = {};
    Token *tokenBaseType = NULL;
    int acceptFuncDefinition = 1;

    tokenBaseType = globals.token;
    baseType = parseBaseType(&attr);
    if (!baseType) {
        errorTypeExpected();
    } else if (baseType->type == TypeStruct || baseType->type == TypeUnion ||
               baseType->type == TypeEnum) {
        Token *last = globals.token->prev;

        if (last->len == 1 && last->str[0] == '}' && consumeReserved(";"))
            return NULL; // Just declaring a struct or an enum.
    }

    for (;;) {
        Token *tokenObjHead = globals.token;

        obj = parseAdvancedTypeDeclaration(baseType, 1);
        obj->isStatic = attr.isStatic;
        obj->isExtern = attr.isExtern;

        if (!obj->token) {
            errorAt(tokenObjHead, "Missing variable/function name.");
        }

        if (attr.isTypedef) {
            expectReserved(";");
            registerTypedef(newTypedef(obj));
            return NULL;
        }

        if (obj->type->type == TypeFunction && matchReserved("{")) {
            // Function definition.
            Obj *funcFound = NULL;
            Node *n = NULL;
            int argOffset = 0;
            int argNum = 0;

            if (!acceptFuncDefinition) {
                errorAt(globals.token, "Function definition is not expected here.");
            }

            for (Obj *arg = obj->func->args; arg; arg = arg->next) {
                if (!arg->token)
                    errorAt(tokenObjHead, "Argument name is missed.");
                else if (arg->type->type == TypeVoid)
                    errorAt(tokenObjHead,
                            "Cannot declare function argument with type \"void\"");
            }

            funcFound = findFunction(obj->token->str, obj->token->len);
            if (funcFound) {
                if (funcFound->func->haveImpl) {
                    errorAt(tokenObjHead, "Redefinition of function.");
                }

                // Check types are same with previous declaration.
                if (!checkTypeEqual(funcFound->func->retType, obj->func->retType)) {
                    errorAt(tokenBaseType,
                            "Function return type mismatch with previous declaration.");
                } else if (funcFound->func->argsCount != obj->func->argsCount ||
                           funcFound->func->haveVaArgs != obj->func->haveVaArgs) {
                    errorAt(tokenObjHead,
                            "Mismatch number of function arguments with previous declaration.");
                } else {
                    Obj *argDecl = funcFound->func->args;
                    Obj *argDef = obj->func->args;
                    for (; argDecl; argDecl = argDecl->next, argDef = argDef->next) {
                        if (!checkTypeEqual(argDecl->type, argDef->type))
                            errorAt(argDef->token,
                                    "Argument type mismatch with previous declaration.");
                    }
                }

                // Argument name may be omitted with function declaration.
                // Function implementation must have argument name, so
                // replace it to make sure argument name can be found.
                // TODO: Free funcFound->args
                funcFound->func->args = obj->func->args;
                funcFound->func->haveImpl = 1;
            } else {
                // Register function
                obj->next = globals.functions;
                globals.functions = obj;
            }
            // TODO: Free n->func
            enterNewEnv();
            n = newNodeFunction(obj->token);
            n->obj = obj;

            globals.currentFunction = obj;

            // Compute argument variables' offset.
            // Note that arguments are all copied onto stack at the head of
            // function.
            if (obj->func->haveVaArgs) {
                for (Obj *v = obj->func->args; v; v = v->next) {
                    ++argNum;
                    if (argNum > REG_ARGS_MAX_COUNT) {
                        v->offset = -ONE_WORD_BYTES * (argNum - REG_ARGS_MAX_COUNT + 1);
                    } else {
                        v->offset = (REG_ARGS_MAX_COUNT - argNum + 1) * ONE_WORD_BYTES;
                    }
                }
                n->env->varSize = REG_ARGS_MAX_COUNT * ONE_WORD_BYTES;
            } else {
                argOffset = 0;
                argNum = 0;
                for (Obj *v = obj->func->args; v; v = v->next) {
                    ++argNum;
                    if (argNum > REG_ARGS_MAX_COUNT) {
                        argOffset -= ONE_WORD_BYTES;
                        v->offset = argOffset;
                    } else {
                        argOffset += sizeOf(v->type);
                        v->offset = argOffset;
                        n->env->varSize = argOffset;
                        if (argNum == REG_ARGS_MAX_COUNT) {
                            argOffset = -ONE_WORD_BYTES;
                        }
                    }
                }
            }
            globals.currentFunction->func->capStackSize = n->env->varSize;

            // Handle function body
            n->body = stmt();

            exitCurrentEnv();

            return n;
        } else if (obj->type->type == TypeFunction) {
            // Function declaration
            Obj *funcFound = NULL;
            funcFound = findFunction(obj->token->str, obj->token->len);
            if (funcFound) {
                // Check types are same with previous declaration.
                if (!checkTypeEqual(funcFound->func->retType, obj->func->retType)) {
                    errorAt(tokenBaseType,
                            "Function return type mismatch with previous declaration.");
                } else if (funcFound->func->argsCount != obj->func->argsCount ||
                           funcFound->func->haveVaArgs != obj->func->haveVaArgs) {
                    errorAt(tokenObjHead,
                            "Mismatch number of function arguments with previous declaration.");
                } else {
                    Obj *argDecl = funcFound->func->args;
                    Obj *argDef = obj->func->args;
                    for (; argDecl; argDecl = argDecl->next, argDef = argDef->next) {
                        if (!checkTypeEqual(argDecl->type, argDef->type))
                            errorAt(tokenObjHead,
                                    "Argument type mismatch with previous declaration.");
                    }
                }
            } else {
                // Register function
                obj->func->haveImpl = 0;
                obj->next = globals.functions;
                globals.functions = obj;
            }
        } else {
            // Global variable declaration
            GVar *gvar = NULL;
            GVar *existingVar = NULL;
            existingVar = findGlobalVar(obj->token->str, obj->token->len);
            if (existingVar && !existingVar->obj->isExtern)
                errorAt(obj->token, "Redefinition of variable.");
            else if (obj->type->type == TypeVoid)
                errorAt(obj->token, "Cannot declare variable with type \"void\"");
